--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -132,6 +132,10 @@ jobs:
           cd ${{ env.buildDir }}
           windeployqt.exe --release --qmldir .. ./${{ env.name }}.exe
           Get-PsDrive
+      - name: The job has failed
+        if: ${{ failure() }}
+        run: |
+          cat ${{ env.srcDir }}/build/vcpkg-manifest-install.log
 
       - name: Set outputs
         id: vars
