--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -71,11 +71,10 @@ jobs:
           ls ${{ env.srcDir }}/vcpkg
           cmake --version
 
-      - name: Install Python 3.7 version
-        uses: actions/setup-python@v1
+      - name: Setup cmake
+        uses: jwlawson/actions-setup-cmake@v1.9
         with:
-          python-version: "3.7"
-          architecture: ${{ matrix.arch }}
+          cmake-version: "3.20"
       # =========================================================================================================
       - name: Install MSVC compiler
         uses: ilammy/msvc-dev-cmd@v1
